--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+numpy
+scipy
 pyvista == 0.44.1
-numpy == 2.2.2
-scipy == 1.14.1
+ridgefollowing@git+https://github.com/MSallermann/cos2_ridge_following.git@v0.1.0
